--- a/Airbnb_clone_coding/templates/users/login.html
+++ b/Airbnb_clone_coding/templates/users/login.html
@@ -9,7 +9,9 @@
 
 
 {%block content%}
-
-   hello!
-    
+    <form method="POST" action="{%url "users:login"%}">
+        {% csrf_token %}
+        {{form.as_p}}
+        <button>Login</button>
+    </form>
 {%endblock content%}
